# dice

./: LICENSE  dice.cabal
src/: Dice.hs  Main.hs
