Cabal-Version: >= 1.6

Name:     dice
Version:  0.1
Category: Web
Synopsis: A CGI script for rolling dice.

Description:
    dice.cgi is a simple CGI executable which rolls dice and displays the
    results. It combats cheating by associating each roll with a name,
    password, and reason.

Author:       Ben Millwood <haskell@benmachine.co.uk>
Maintainer:   Ben Millwood <haskell@benmachine.co.uk>
Copyright:    2011 Ben Millwood
License:      BSD3
License-file: LICENSE

Build-type:  Simple
Tested-with: GHC == 7.2.1

Executable dice.cgi
  Main-is:        Main.hs
  Other-modules:  Dice
  Build-depends:
      base < 5,
      bytestring == 0.9.*,
      containers >= 0.1 && < 0.5,
      time >= 1 && < 1.3,
      acid-state == 0.6.*,
      blaze-html == 0.4.*,
      data-lens >= 2.0.1 && < 2.1,
      mtl < 2.1,
      random == 1.0.*,
      safecopy >= 0.5 && < 0.7,
      SHA >= 1.0.1 && < 1.6,
      split < 1,
      text < 0.12
  Extensions:
      DeriveDataTypeable
      NamedFieldPuns
      OverloadedStrings
      TemplateHaskell
      TypeFamilies

  GHC-Options:    -W
  Hs-source-dirs: src
