Cabal-Version: >= 1.6

Name:     dice
Version:  0.1
Category: Web
Synopsis: A CGI script for rolling dice.

Description:
    dice.cgi is a simple CGI executable which rolls dice and displays the
    results. It combats cheating by associating each roll with a name,
    password, and reason.

Author:       Ben Millwood <haskell@benmachine.co.uk>
Maintainer:   Ben Millwood <haskell@benmachine.co.uk>
Bug-reports:  https://github.com/benmachine/dice/issues
Copyright:    2011 Ben Millwood
License:      BSD3
License-file: LICENSE

Build-type:  Simple
Tested-with: GHC == 7.2.1

-- Oddly, this needs to be placed under all the metadata
Source-repository head
  Type:     git
  Location: git://github.com/benmachine/dice.git

Executable dice.cgi
  Main-is:        Main.hs
  Other-modules:  Dice
  Build-depends:
      -- Standard libraries
      base < 5,
      bytestring == 0.9.*,
      containers >= 0.1 && < 0.5,
      time >= 1 && < 1.3,
      -- Everything else
      acid-state == 0.6.*,
      blaze-html == 0.4.*,
      data-lens >= 2.0.1 && < 2.1,
      http-types >= 0.5.2 && < 0.7,
      mtl < 2.1,
      random == 1.0.*,
      safecopy >= 0.5 && < 0.7,
      SHA >= 1.0.1 && < 1.6,
      text < 0.12

  Extensions:
      DeriveDataTypeable
      NamedFieldPuns
      OverloadedStrings
      TemplateHaskell
      TypeFamilies

  GHC-Options:    -W
  Hs-source-dirs: src
